#14 Fixed background color on dark mode

--- a/src/components/Heading/header.css
+++ b/src/components/Heading/header.css
@@ -1,5 +1,7 @@
 .darkmode {
   width: 36px;
+  margin-right: 1em;
+
   max-height: inherit;
   max-width: inherit;
 }
